# bc-sprite-modder

./: .gitignore  data_setup.py  extract_packs_to_folder.py  index.html  main.py  mod_repack.py  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: APP_ARCHITECTURE_OVERVIEW.md  CANVAS_EDITOR_STATUS.md  CANVAS_FLOATING_LAYER_PLAN.md  CANVAS_WASM_MIGRATION.md  DEVELOPMENT_PERSPECTIVE.md  EDITOR_CANDIDATES.md  EXTRACTED_PACKS_COMPARISON.md  SPRITE_ACCESS_BCData.md  USER_PERSPECTIVE.md
scripts/: create-icon.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/canvas-engine/: Cargo.toml
src-tauri/canvas-engine/src/: history.rs  input.rs  lib.rs  shortcuts.rs  state.rs  tools.rs  tools_draw.rs  tools_move.rs  tools_select.rs  types.rs  wasm_api.rs
src-tauri/capabilities/: default.json
src-tauri/scripts/: data_setup.py  extract_form_assets.py  game_packs_loader.py  list_unit_forms.py  load_form_assets.py  project_model.py  render_viewport_frame.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/canvas_editor/: api.rs  history.rs  input.rs  mod.rs  session_store.rs  shortcuts.rs  state.rs  tools.rs  tools_draw.rs  tools_move.rs  tools_select.rs  types.rs
src-tauri/src/commands/: canvas_editor.rs  data_setup.rs  mod.rs  project.rs  sprite.rs  workspace.rs
src-tauri/src/viewport/: draw_data.rs  mod.rs
src-tauri/src/viewport/anim/: mod.rs  skeleton.rs  state.rs
src-tauri/src/viewport/parse/: imgcut.rs  maanim.rs  mamodel.rs  mod.rs
src/components/: AppShell.tsx  SpriteEditorView.tsx
(+27 files in other folders)
