[package]
name = "battle-cats-sprite-modder"
version = "0.1.0"
description = "Battle Cats Sprite Modder"
edition = "2021"
rust-version = "1.70"

[lib]
name = "battle_cats_sprite_modder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
regex = "1"
walkdir = "2"
